Version 5.0.0.9
Continuation barriers now block only downward continuation jumps
 and allow escapes through full continuations
Added #:async-apply option to _fun

Version 5.0.0.8
Changed internal-definition handling to allow expressions mixed
 with definitions

Version 5.0.0.7
Added support for subprocesses as new process groups

Version 5.0.0.6
Added support for best-effort termination of subprocess by a
 custodian

Version 5.0.0.5
Added flreal-part, flimag-part, make-flrectangular, and unsafe
 variants

Version 5.0.0.4
Added chaperone-evt

Version 5.0.0.3
identifier-prune-to-source-module

Version 5.0.0.2
Added fl->eact-integer, fl->fx, and unsafe-fl->fx

Version 5.0.0.1
Changed apply binding to enable lower-level optimizations

Version 5.0, May 2010
Changed the core executable from mzscheme to racket
Changed paths like the preferences file to use "racket" instead
 of "mzscheme" or "plt-scheme"
Changed default value printer to use quasiquote style
The language of a program's main module can specify run-time
 configuration actions, such as setting the default printer's
 style
Changed regexp-match* et al. to make ^ matching relative to the
 original string (not substrings for matches after the for) and to
 allow empty matches in all positions except immediately after an
 empty match
Changed regexp-match and other functions to allow a path as
 an input
Added chaperones

Version 4.2.5, March 2010
Added scheme/future, enabled by default on main platforms
Changed module to wrap each body expression in a prompt
Changed define-cstruct to bind type name for struct-out, etc.

Version 4.2.4, January 2010
Added scheme/flonum and scheme/fixnum
Extended scheme/unsafe/ops
Changed JIT to support unboxed local binding of known-flonum
 arguments to unsafe-fl functions
Changed JIT to inline numeric ops with more than 2 arguments
Added #:save-errno option for foreign-function types
Added module->imports and module->exports

Version 4.2.3, November 2009