@@ -413,7 +413,8 @@ dlmmap_locked (void *start, size_t length, int prot, int flags, off_t offset)
 	  close (execfd);
 	  goto retry_open;
 	}
-      (void)ftruncate (execfd, offset);
+      if (ftruncate (execfd, offset)) { /* test avoids a compiler warning */
+      }
       return MFAIL;
     }
   else if (!offset
@@ -425,7 +426,8 @@ dlmmap_locked (void *start, size_t length, int prot, int flags, off_t offset)
   if (start == MFAIL)
     {
       munmap (ptr, length);
-      (void)ftruncate (execfd, offset);
+      if (ftruncate (execfd, offset)) {  /* test avoids a compiler warning */
+      }
       return start;
     }
 
